coins in the right place on dictator page

--- a/baseline_trials/ComprehensionQuestionPage.html
+++ b/baseline_trials/ComprehensionQuestionPage.html
@@ -227,10 +227,10 @@
 </script>
 
 
-    <style>
+<style>
 
-        body {
-            justify-content: center;
+    body {
+        justify-content: center;
         align-items: center;
         height: 100vh;
         margin-top: 4vw;
@@ -327,7 +327,7 @@
         transform-origin: top left; /* Ensure scaling starts from top-left */
         transform: scale(1); /* Default scale */
         transition: transform 0.3s ease; /* Smooth scaling */
-        /*border:1px solid black;*/
+        border:0px solid black;
         margin-left:auto;
         margin-right:auto;
     }
