--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -1,15 +1,13 @@
 {{ block title }}
 
+<p style="text-align: center; font-size: 26px;  "> Decision {{player.round_number}} </p>
+
 <div style="display: flex; justify-content: center">
     <label>
-<!--        Step {{ participant.progress }} of {{ C.total_pages }}-->
-        <progress value="{{ participant.progress }}" max="400">
+        <progress value="{{ participant.progress }}" max="{{ total_pages }}">
         </progress>
     </label>
 </div>
-
-<p style="text-align: center; font-size: 26px;  "> Decision {{player.round_number}} </p>
-
 
 
 {{ endblock }}
