--- a/baseline_trials/ComprehensionQuestionPage.html
+++ b/baseline_trials/ComprehensionQuestionPage.html
@@ -4,8 +4,7 @@
 
 <div style="display: flex; justify-content: center">
     <label>
-<!--        Step {{ participant.progress }} of {{ C.total_pages }}-->
-        <progress value="{{ participant.progress }}" max="{{ C.total_pages }}">
+        <progress value="{{ participant.progress }}" max="{{ total_pages }}">
         </progress>
     </label>
 </div>
