--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -1,6 +1,13 @@
 {{ block title }}
 
-<p style="text-align: center; font-size: 26px;  "> Bonus points </p>
+    <p style="text-align: center; font-size: 26px;  "> Bonus points </p>
+
+<div style="display: flex; justify-content: center">
+    <label>
+        <progress value="{{ participant.progress }}" max="{{ total_pages }}">
+        </progress>
+    </label>
+</div>
 
 {{ endblock }}
 {{ block content }}
