decision number on page title continuous (38 on unviersal norm then increments of 1) Lines starting

--- a/crowding_out/CrowdingInOutPageOld.html
+++ b/crowding_out/CrowdingInOutPageOld.html
@@ -1,7 +1,7 @@
 {{ block title }}
 
 
-<p style="text-align: center; font-size: 26px;  "> Decision X </p>
+<p style="text-align: center; font-size: 26px;  "> Decision {{ participant.decision_page_number }} </p>
 
 <div style="display: flex; justify-content: center">
     <label>
