--- a/dice_task/Filler.html
+++ b/dice_task/Filler.html
@@ -1,6 +1,6 @@
 {{ block title }}
 
-    <p style="text-align: center; font-size: 26px; "> In between pages </p>
+    <p style="text-align: center; font-size: 26px; "> Instructions </p>
 
 <div style="display: flex; justify-content: center">
     <label>
