--- a/rule_following/RuleFollowing.html
+++ b/rule_following/RuleFollowing.html
@@ -1,6 +1,6 @@
 {{ block title }}
 
-<p style="text-align: center; font-size: 26px; "> Anti-social rule following </p>
+<p style="text-align: center; font-size: 26px; "> Decision {{ participant.decision_page_number }} </p>
 
 <div style="display: flex; justify-content: center">
     <label>
