prolific instructions, filler pages, fix coins in DG

--- a/demographics/Circle.html
+++ b/demographics/Circle.html
@@ -1,6 +1,6 @@
 {{ block title }}
 
-    <p style="text-align: center; font-size: 26px; "> Self-other circle </p>
+    <p style="text-align: center; font-size: 26px; "> Additional questions: Part 4 </p>
 
 {{ endblock }}
 
