--- a/demographics/Demographics.html
+++ b/demographics/Demographics.html
@@ -1,6 +1,6 @@
 {{ block title }}
 
-    <p style="text-align: center; font-size: 26px; "> Demographics questions </p>
+    <p style="text-align: center; font-size: 26px; "> Additional questions: Part 2 </p>
 
 {{ endblock }}
 
