--- a/demographics/Ladder.html
+++ b/demographics/Ladder.html
@@ -1,6 +1,6 @@
 {{ block title }}
 
-    <p style="text-align: center; font-size: 26px; "> Social ladder </p>
+    <p style="text-align: center; font-size: 26px; "> Additional questions: Part 3 </p>
 
 {{ endblock }}
 
