--- a/free_rider/Narratives.html
+++ b/free_rider/Narratives.html
@@ -1,6 +1,6 @@
 {{ block title }}
 
-    <p style="text-align: center; font-size: 26px; "> Free-rider narratives </p>
+    <p style="text-align: center; font-size: 26px; "> Additional questions: Part 1 </p>
 {{ endblock }}
 
 {{ block style }}
