--- a/pref_2PP_3PP/pref_2PP_3PP_Page.html
+++ b/pref_2PP_3PP/pref_2PP_3PP_Page.html
@@ -1,6 +1,6 @@
 {{ block title }}
 
-<p style="text-align: center; font-size: 26px;  "> Final decision {{player.round_number}} </p>
+<p style="text-align: center; font-size: 26px;  "> Additional question: Block 1 </p>
 
 
 {{ endblock }}
