--- a/rule_following/RuleFollowing.html
+++ b/rule_following/RuleFollowing.html
@@ -1,6 +1,6 @@
 {{ block title }}
 
-<p style="text-align: center; font-size: 26px; "> Anti-social rule following </p>
+<p style="text-align: center; font-size: 26px; "> Decision 1 </p>
 
 {{ endblock }}
 
@@ -251,11 +251,11 @@
 
         {{ if condition == 'hurt_me' }}
         <p>
-            For each slider that you move to position “50”, you will lose XX points.
+            For each slider that you move to position “50”, you will lose 4 points.
         </p>
         {{ else }}
         <p>
-            For each slider you move to position "50", another person in this study will lose XX points.
+            For each slider you move to position "50", another person in this study will lose 4 points.
         </p>
         {{ endif }}
 
