--- a/baseline_trials/Consent.html
+++ b/baseline_trials/Consent.html
@@ -56,7 +56,7 @@
         <li>After agreeing to participate, you can start immediately. Each part includes <b>specific instructions</b>.
               Please read them carefully, as <b>your decisions affect your final payment</b>.</li>
         <li>The study follows the instructions exactly. There is <b><u>no</u> hidden information or deception</b>.</li>
-        <li> You will make about <b>50 decisions</b>, and the study takes around <b>30 minutes</b>. </li>
+        <li> The study is made up of 2 blocks. In total, you will make about <b>{{ C.NUM_DECISIONS_APPROX }} decisions</b>, and the study takes around <b>30 minutes</b>. </li>
       </ul>
 
   <!--    {{C.NUM_ROUNDS}}-->
@@ -65,7 +65,9 @@
 
       <ul>
         <li>For your participation, you will receive <b>{{ participation_fee }}</b>.
-          Additionally, you can earn <b>bonus points</b> based on your decisions and those of other participants, as explained on the next page. </li>
+<!--          Additionally, you can earn <b>bonus points</b> based on your decisions and those of other participants, as explained on the next page.-->
+            Additionally, you can earn <b>bonus points</b> based on your decisions, as explained on the next page.
+        </li>
       </ul>
 
       <h6><u>Additional information</u></h6>
