--- a/crowding_out/ConditionalCoopPage.html
+++ b/crowding_out/ConditionalCoopPage.html
@@ -1,6 +1,6 @@
 {{ block title }}
 
-<p style="text-align: center; font-size: 26px;  "> Final decision {{player.round_number}} </p>
+<p style="text-align: center; font-size: 26px;  "> Decision 4 </p>
 
 
 {{ endblock }}
