--- a/dice_task/DiceRatings.html
+++ b/dice_task/DiceRatings.html
@@ -1,6 +1,6 @@
 {{ block title }}
 
-<p style="text-align: center; font-size: 26px; "> Dice task </p>
+<p style="text-align: center; font-size: 26px; "> Decision 5 </p>
 
 
 {{ endblock }}
