--- a/dice_task/Filler_end_block2.html
+++ b/dice_task/Filler_end_block2.html
@@ -1,6 +1,6 @@
 {{ block title }}
 
-    <p style="text-align: center; font-size: 26px; "> Block 1 complete! </p>
+    <p style="text-align: center; font-size: 26px; "> Block 2 complete! </p>
 
 {{ endblock }}
 
@@ -23,16 +23,16 @@
 {{ block content }}
 
     <p>
-      You have now <b> completed the first block</b>, where you made decisions as Person A, Person B, or Person C.
+      You have now <b> completed the second block</b>!
 
         </p>
 
     <p>
-        You will find out how many bonus points you collected in Block 1 only after the study is over, because bonus points are calculated after all participants have completed the study.
+        You will find out how many bonus points you collected in Block 2 only after the study is over, because bonus points are calculated after all participants have completed the study.
     </p>
 
     <p>
-       On the next page, you will be asked <b> one additional question </b> about Block 1.
+       On the next page, you will be asked <b> some additional questions </b>.
     </p>
 
 
