--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -40,7 +40,7 @@
     <h6><u>Block 1</u></h6>
 
      <p>
-        There are two blocks of decisions in this study. In the first block, you will make decisions in different <b>situations</b> and in different <b>roles</b>. After the first block of decisions,
+        There are two blocks in this study: a longer first block and a shorter second block. In the first block, you will make decisions in different <b>situations</b> and in different <b>roles</b>. After the first block of decisions,
         <b> <u>one</u> situation</b> and <b> <u>one</u> role</b> from the first block will be randomly selected to <b>determine your bonus points</b> in the first block.
     </p>
 
