--- a/demographics/CommentBox.html
+++ b/demographics/CommentBox.html
@@ -32,7 +32,7 @@
 <div class="card-body">
 
     <p>
-        This study is new, and we are still testing it. As such, we really appreciate feedback.
+        This is a new study, and we are still testing it. We would really appreciate your feedback.
     </p>
 
     {{ formfield player.question_box }}
