--- a/crowding_out/CrowdingInOutPage.html
+++ b/crowding_out/CrowdingInOutPage.html
@@ -716,13 +716,13 @@
 
     <p style="text-align: center; "> {{text1}} </p>
 
-    <p style="font-size: 14px; ">
+    <p style="">
             {{ text2|safe }}
         </p>
 
-<label for="charity-select" style="font-size: 14px; ">You can choose your own charity:</label>
-<select id="charity-select" style="font-size: 14px; ">
-    <option value="" selected disabled>Randomly selected charity</option>
+<label for="charity-select" style="">You can choose your own charity:</label>
+<select id="charity-select" style="">
+    <option value="" selected>Randomly selected charity</option>
     <option value="Red Cross / Red Crescent">Red Cross / Red Crescent (International)</option>
     <option value="Red Cross (local)">{{local_red_cross}}</option>
     <option value="The Salvation Army">The Salvation Army</option>
@@ -870,16 +870,12 @@
             {{ text3|safe }}
         </p>
 
-        <p style="font-size: 14px; text-align: center; ">
-            {{ text4|safe }}
-        </p>
-
 
 <!--        <p style="font-size: 14px; text-align: center; ">-->
 <!--            <strong> What do you think is the most common response? </strong>-->
 <!--        </p>-->
 
-        <p style="font-size: 14px; text-align: center; ">
+        <p style="text-align: center; ">
                 How <b style="color: red;">altruistic</b> is Person A?
             </p>
 
@@ -895,7 +891,7 @@
 
             <br>
 
-            <p style="font-size: 14px; text-align: center; ">
+            <p style="text-align: center; ">
                 How <b style="color: red;">likeable</b> is Person A?
             </p>
 
@@ -910,7 +906,13 @@
             </div>
         </div>
 
-    <br>
+        <br>
+
+        <p style="text-align: center; ">
+            {{ text4|safe }}
+        </p>
+
+
     <hr>
 
     </div>
