--- a/free_rider/Narratives.html
+++ b/free_rider/Narratives.html
@@ -1,6 +1,8 @@
 {{ block title }}
 
-    <p style="text-align: center; font-size: 26px; "> Decision {{ participant.decision_page_number }} </p>
+<p style="text-align: center; font-size: 26px; "> Additional questions </p>
+
+<!--    <p style="text-align: center; font-size: 26px; "> Decision {{ participant.decision_page_number }} </p>-->
 
 <div style="display: flex; justify-content: center">
     <label>
