--- a/rule_following/RuleFollowing.html
+++ b/rule_following/RuleFollowing.html
@@ -186,7 +186,7 @@
 
         function updatePointsDisplay() {
             const baseText = condition === "hurt_other"
-                ? "Another person loses"
+                ? "Another participant loses"
                 : "You lose";
             pointsDisplay.textContent = `${baseText} ${pointsLost} point${pointsLost !== 1 ? 's' : ''}`;
         }
@@ -252,22 +252,22 @@
 <body>
     <div class="card-body">
 
-        <p>
+        <p style="text-align: center; ">
             In this part, you decide how to position three sliders.
         </p>
 
         {{ if condition == 'hurt_me' }}
-        <p>
-            For each slider that you move to position “50”, you will lose 4 points.
+        <p style="text-align: center; ">
+            For each slider that you move to position “50”, you will lose 2 points.
         </p>
         {{ else }}
-        <p>
-            For each slider you move to position "50", another person in this study will lose 4 points.
+        <p style="text-align: center; ">
+            For each slider you move to position "50", another participant in this study will lose 2 points.
         </p>
         {{ endif }}
 
-        <p>
-            The rule of this task is to move each slider to position “50”.
+        <p style="text-align: center; ">
+            <b> The rule of this task is to move each slider to position “50”. </b>
         </p>
         <br>
 
@@ -318,9 +318,9 @@
 
         <div id="points-display" data-condition="{{ condition }}" style="text-align: center;">
             {{ if condition == 'hurt_me' }}
-                You loses 0 points.
+                You lose 0 points.
             {{ else }}
-                Another person loses 0 points.
+                Another participant loses 0 points.
             {{ endif }}
         </div>
 
