--- a/crowding_out/CrowdingInOutPage.html
+++ b/crowding_out/CrowdingInOutPage.html
@@ -720,7 +720,7 @@
             {{ text2|safe }}
         </p>
 
-<label for="charity-select" style="">You can choose your own charity:</label>
+<label for="charity-select" style=""> We will donate to a randomly selected charity unless you choose a preferred one:</label>
 <select id="charity-select" style="">
     <option value="" selected>Randomly selected charity</option>
     <option value="Red Cross / Red Crescent">Red Cross / Red Crescent (International)</option>
