--- a/baseline_trials/instructionPage.html
+++ b/baseline_trials/instructionPage.html
@@ -1,6 +1,10 @@
 {{ block title }}
 
-<p style="text-align: center; font-size: 26px;  ">
+<p style="font-size: 22px; text-decoration: underline;">
+    Block 1
+</p>
+
+<p style="text-align: center; font-size: 26px; margin-bottom: 4px; ">
     Instructions:
     {% if "0DG" in player.treatment and player.round_number < 9 %}
         Part 1
