--- a/baseline_trials/Consent.html
+++ b/baseline_trials/Consent.html
@@ -9,6 +9,22 @@
 
 {% endblock %}
 
+{{ block style }}
+
+    <style>
+
+        body {
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin-top: 4vw;
+            background-color: #f4f4f4;
+        }
+
+    </style>
+
+{{ endblock }}
+
 
 {% block content %}
 
