--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -1,6 +1,10 @@
 {{ block title }}
 
-<p style="text-align: center; font-size: 26px;  "> Decision {{player.round_number}} </p>
+<p style="font-size: 22px; text-decoration: underline;">
+    Block 1
+</p>
+
+<p style="text-align: center; font-size: 26px; margin-bottom: 4px; "> Decision {{player.round_number}} </p>
 
 <div style="display: flex; justify-content: center">
     <label>
