--- a/pref_2PP_3PP/Filler_end_block1.html
+++ b/pref_2PP_3PP/Filler_end_block1.html
@@ -2,6 +2,14 @@
 
     <p style="text-align: center; font-size: 26px; "> Start of Block 2 </p>
 
+    <div style="display: flex; justify-content: center; margin-bottom: 4px;">
+        <label>
+            <progress value="{{ participant.progress }}" max="{{ total_pages }}">
+            </progress>
+        </label>
+    </div>
+
+
 {{ endblock }}
 
 {{ block style }}
