added likability to dice app

--- a/demographics/RelationalMobility.html
+++ b/demographics/RelationalMobility.html
@@ -93,7 +93,7 @@
         <br>
         <p style="text-align: center;">
             <strong>Even if these people were not satisfied with their current relationships,
-                they would often have no choice but to stay with them (reversed).</strong>
+                they would often have no choice but to stay with them.</strong>
         </p>
 
         {{ formfield "choosing_3" }}
