--- a/dice_task/DiceRatings.html
+++ b/dice_task/DiceRatings.html
@@ -432,7 +432,7 @@
     <br>
     <div class='responsive-div'>
         <p style="text-align: center;">
-            <strong>How much do you want to send to the other person?</strong>
+            <strong>How many points do you want to send to the other person?</strong>
         </p>
 
         {{ form.trust_points }}
